--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <!-- Script
    =================================================== -->
     <script src="js/modernizr.js"></script>
-    <script src="http://www.w3schools.com/lib/w3data.js"></script>
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
 
    <!-- Favicons
 	=================================================== -->
