--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 </head>
 
 <body class="homepage">
+   
+   <img src="images/portfolio/alas00.jpg" width="100%">
 
    <!-- Header
    =================================================== -->
